--- a/template/routine.html
+++ b/template/routine.html
@@ -21,11 +21,8 @@ routine
   
   <div class="col-9  p-3 text-center">
     {% if request.user.is_superuser %}
-  <div>
-
-    <button type="button"
-      class="btn btn-sm border btn-default fw-bold mx-3"
-      style="color:blue;" data-bs-toggle="modal"
+    <div class="text-end">
+      <button type="button" class="btn btn-sm btn-info mx-3" data-bs-toggle="modal"
       data-bs-target="#add_syllabus">Add Syllabus</button>
     
   </div>
@@ -62,15 +59,25 @@ routine
       </div>
       <div class="modal-body">
 
-        <form action="{% url 'routine' %}" method="POST" enctype="multipart/form-data">
+        <form action="{% url 'academic' %}" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
-          <label for ='dept'>Department Name:</label>
-          <input type="text" name="dept_name"><br><br>
-          <label for="session">Session:</label>
-          <input type="text" name="session"><br><br>
-          <label for="pdfFile">Choose a PDF file:</label>
-          <input type="file" class="form-control-file" id="pdfFile"
-            name="pdfFile">
+          <div class="mb-3">
+            <label for ='dept' class="form-label">Department Name:</label>
+            <select class="form-control" id="dept" name="dept">
+              <option value="">Select</option>
+              {% for dept in department_list %}
+                  <option value="{{dept.department}}">{{dept.department}}</option>
+              {% endfor %}
+            </select>
+          </div>
+          <div class="form-group my-2">
+            <label class="form-label" for="session">Session:</label>
+            <input type="text" class="form-control" name="session" required>
+          </div>
+          <div class="form-group my-2">
+            <label class="form-label" for="pdfFile">Choose a PDF file:</label>
+            <input type="file" class="form-control-file" id="pdfFile" name="pdfFile" required>
+          </div>
           <div class="text-center m-3">
             <button type="submit" class="btn btn-primary">Upload</button>
           </div>
