change some background image :XD

--- a/template/alumni.html
+++ b/template/alumni.html
@@ -3,7 +3,32 @@
 {% block title %}
 CCN community
 {% endblock %}
-
+{% block head %}
+{{block.super}}
+<style>
+  body{
+      background-image: url(../static/img/alumni.jpg);
+      background-size: cover;
+  }
+  select{
+    background-color: transparent;
+    outline: none;
+    padding: 4px;
+    padding-left: 10px;
+    border-radius: 10px;
+  }
+  input{
+    background-color: transparent;
+    outline: none;
+    padding: 4px;
+    padding-left: 10px;
+    border-radius: 10px;
+  }
+  input::placeholder{
+    color: black;
+  }
+</style>
+{% endblock %}
 {% block content %}
 <div class="m-3">
     <div class="row m-3">
