--- a/template/notice.html
+++ b/template/notice.html
@@ -3,8 +3,16 @@
 {% block title %}
 Notice
 {% endblock %}
+{% block head %}
+{{block.super}}
+<style>
+  body{
+    background-image: url(../static/img/notice.jpg);
+    background-size: cover;
+  }
+</style>
+{% endblock %}
 {% block content %}
-
 <div class="row">
   <div class="col  p-3 text-center">
     <div class="text-end m-4">
@@ -12,38 +20,33 @@ Notice
         <A class="btn btn-info" href="{% url 'add_notice' %}">Add Notice</A>
       {% endif %}
     </div>
-    <div id="Academic" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
-      
-      <div class="card m-4 p-3">
-        <table class="table table-striped">
-          <tr>
-            <th>Title</th>
-            <th>Category</th>
-            <th>Department</th>
-            <th>PDF</th>
-            {% if user.is_superuser %}
-            <th>Action</th>
-            {% endif %}
-          </tr>
-          {% for notice in notices %}
-          <tr>
-            <td>{{notice.title}}</td>
-            <td>{{notice.category}}</td>
-            <td>{{notice.department.department}}</td>
-            <td>
-              <a href="{% url 'download_pdf' notice_id=notice.id %}">View</a>
-            </td>
-            {% if user.is_superuser %}
-            <th>
-              <a href="{% url 'delete_notice' notice_id=notice.id %}">Delete</a>
-            </th>
-            {% endif %}
-          </tr>
-          {% endfor %}
-        </table>
-      </div>
-    </div>
+    <h1 class="text-center bg-white ">Notices</h1>
+    <table class="table table-light table-striped ">
+      <tr>
+        <th>Title</th>
+        <th>Category</th>
+        <th>Department</th>
+        <th>PDF</th>
+        {% if user.is_superuser %}
+        <th>Action</th>
+        {% endif %}
+      </tr>
+      {% for notice in notices %}
+      <tr>
+        <td>{{notice.title}}</td>
+        <td>{{notice.category}}</td>
+        <td>{{notice.department.department}}</td>
+        <td>
+          <a href="{% url 'download_pdf' notice_id=notice.id %}">View</a>
+        </td>
+        {% if user.is_superuser %}
+        <th>
+          <a href="{% url 'delete_notice' notice_id=notice.id %}">Delete</a>
+        </th>
+        {% endif %}
+      </tr>
+      {% endfor %}
+    </table>
     
   </div>
 </div>
