--- a/template/master.html
+++ b/template/master.html
@@ -27,9 +27,16 @@
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="{% static 'js/js.js' %}"></script>
+    <style>
+        body{
+            background-image: url(../static/img/bg-1.jpg);
+        }
+    </style>
+    {% block head %}
+    {% endblock %}
     </head>
 </head>
-<body>
+<body >
 
     <nav class="navbar navbar-expand" style="background:linear-gradient(156deg, rgba(171,6,147,1) 17%, rgba(161,15,101,1) 34%, rgba(162,25,25,1) 94%); color:rgb(245, 237, 228)" >
         <div class="container-fluid">
