--- a/template/academic.html
+++ b/template/academic.html
@@ -27,6 +27,9 @@ Academic
         data-bs-target="#add_syllabus">Add Syllabus</button>
     </div>
     {%endif%}
+    {% if error_message %}
+        <p style="color: red;">Error: {{ error_message }}</p>
+    {% endif %}
     {% for department_list in department_list %}
       <div id="{{ department_list.department }}" class="card text-dark bg-light m-4"
         style="max-width:100%; ">
@@ -63,16 +66,15 @@ Academic
       </div>
       <div class="modal-body">
 
-        <form action="{% url 'academic' %}" method="POST" enctype="multipart/form-data">
+        <form action="{% url 'add_syllabus' %}" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           <div class="mb-3">
-            <label for ='dept' class="form-label">Department Name:</label>
-            <select class="form-control" id="dept" name="dept">
-              <option value="">Select</option>
+            <label for ='department_name' class="form-label">Department Name:</label>
+            <select class="form-control" id="department_name" name="department_name">
               {% for dept in department_list %}
-                  <option value="{{dept.department}}">{{dept.department}}</option>
+                  <option value="{{ dept.department }}">{{ dept.department }}</option>
               {% endfor %}
-            </select>
+          </select>
           </div>
           <div class="form-group my-2">
             <label class="form-label" for="session">Session:</label>
