--- a/template/question_bank.html
+++ b/template/question_bank.html
@@ -20,12 +20,15 @@ Academic
   </div>
   
   <div class="col-9  p-3 text-center">
-    {% if request.user.is_superuser %}
+    
     <div class="text-end">
       <button type="button" class="btn btn-sm btn-info mx-3" data-bs-toggle="modal"
       data-bs-target="#add_syllabus">Add Questions</button>
   </div>
-  {%endif%}
+  
+  {% if error_message %}
+        <p style="color: red;">Error: {{ error_message|upper }}</p>
+  {% endif %}
   {% for department_list in department_list %}
   <div id="{{ department_list.department }}" class="card text-dark bg-light m-4"
     style="max-width:100%; ">
@@ -62,18 +65,18 @@ Academic
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="addLabel">Add the Syllabus with session</h5>
+        <h5 class="modal-title" id="addLabel">Add the Question</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"
           aria-label="Close"></button>
       </div>
       <div class="modal-body">
 
-        <form action="{% url 'academic' %}" method="POST" enctype="multipart/form-data">
+        <form action="{% url 'add_question' %}" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
 
           <div class="mb-3">
-            <label for ='dept' class="form-label">Department Name:</label>
-            <select class="form-control" id="dept" name="dept">
+            <label for ='department_name' class="form-label">Department Name:</label>
+            <select class="form-control" id="department_name" name="department_name">
               <option value="">Select</option>
               {% for dept in department_list %}
                   <option value="{{dept.department}}">{{dept.department}}</option>
@@ -83,6 +86,10 @@ Academic
           <div class="form-group my-2">
             <label class="form-label" for="session">Session:</label>
             <input type="text" class="form-control" name="session" required>
+          </div>
+          <div class="form-group my-2">
+            <label class="form-label" for="course_name">Course Name:</label>
+            <input type="text" class="form-control" name="course_name" required>
           </div>
           <div class="form-group my-2">
             <label class="form-label" for="pdfFile">Choose a PDF file:</label>
