--- a/template/routine.html
+++ b/template/routine.html
@@ -13,37 +13,49 @@ routine
       id="myInput"
       onkeyup="myFunction()" placeholder="Search for Department..">
     <ul class="list-unstyled text-start" id="sortable-list">
-      <li> <a class="nav-link" href="#Computer Science ">Computer Science</a></li>
-      <li><a class="nav-link" href="#Law ">law</a></li>
-      <li><a class="nav-link" href="#Pharmacy ">Pharmacy</a></li>
-    </ul>
-  </div>
-  
-  <div class="col-9  p-3 text-center">
-    {% if request.user.is_superuser %}
-    <div class="text-end">
-      <button type="button" class="btn btn-sm btn-info mx-3" data-bs-toggle="modal"
-      data-bs-target="#add_syllabus">Add Syllabus</button>
-    
+      
+        {% for department_list in department_list %}
+        <li><a class="nav-link" href="#{{ department_list.department }} ">{{ department_list.department }}</a></li>
+        {% endfor %}
+      </ul>
     </div>
-  {%endif%}
-    <div id="Computer Science" class="card text-dark bg-light m-4"
+    
+    <div class="col-9  p-3 text-center">
+      {% if request.user.is_superuser %}
+      <div class="text-end">
+        <button type="button" class="btn btn-sm btn-info mx-3" data-bs-toggle="modal"
+        data-bs-target="#add_syllabus">Add Routine</button>
+    </div>
+    {%endif%}
+    {% if error_message %}
+          <p style="color: red;">Error: {{ error_message|upper }}</p>
+    {% endif %}
+    {% for department_list in department_list %}
+    <div id="{{ department_list.department }}" class="card text-dark bg-light m-4"
       style="max-width:100%; ">
       <div class="card-header d-inline-flex ">
-        <div class="flex-fill">Computer Science</div>
-
+        <div class="flex-fill">{{ department_list.department }}</div>
+  
       </div>
-
+  
       <div class="card m-4 p-3">
-        <ul id="sortable-list2">
-          <li><a href="example1.pdf" target="_blank">2019</a></li>
-          <li><a href="example2.pdf" target="_blank">PDF Document 2</a></li>
-          <li><a href="example3.pdf" target="_blank">PDF Document 3</a></li>
-          <!-- Add more PDF links as needed -->
+        <ul  id="sortable-list2">
+        
+        {%for routine_list in routine_list%}
+        {% if department_list.department == routine_list.routine.department.department %}
+          {% if routine_list.pdf_file.url %}
+            <li><a href="{{ routine_list.pdf_file.url }}" target="_blank"> {{ routine_list.course_name }} {{ routine_list.routine.session_name }}</a></li>
+          {%endif%}
+        {%endif%}
+       
+        {%endfor%}
         </ul>
+        </ul>
+        
       </div>
     </div>
-
+  {% endfor %}
+  
   </div>
 </div>
 
@@ -53,18 +65,17 @@ routine
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="addLabel">Add the Syllabus with session</h5>
+        <h5 class="modal-title" id="addLabel">Add the Routine with session</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"
           aria-label="Close"></button>
       </div>
       <div class="modal-body">
 
-        <form action="{% url 'academic' %}" method="POST" enctype="multipart/form-data">
+        <form action="{% url 'add_routine' %}" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           <div class="mb-3">
-            <label for ='dept' class="form-label">Department Name:</label>
-            <select class="form-control" id="dept" name="dept">
-              <option value="">Select</option>
+            <label for ='department_name' class="form-label">Department Name:</label>
+            <select class="form-control" id="department_name" name="department_name">
               {% for dept in department_list %}
                   <option value="{{dept.department}}">{{dept.department}}</option>
               {% endfor %}
