--- a/template/blood_community.html
+++ b/template/blood_community.html
@@ -25,7 +25,7 @@ CCN community
 {% block content %}
 
 <div class="m-3">
-  <input class="border-2 m-3" style="width: 30%;" type="text" id="myInput"
+  <input class="border-2 m-3 bg-body" style="width: 30%;" type="text" id="myInput"
     onkeyup="myFunction()" placeholder="Search for blood group..">
   <table class="table table-success table-striped m-3" id="bloodTable"
     style="width: 98%;">
