--- a/template/master.html
+++ b/template/master.html
@@ -54,37 +54,37 @@
                     <a class="nav-link h4 {% if request.path == '/'%}active{% endif %} link-light " href="/">Home</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 {% if 'academic' in request.path %}active{% endif %} link-light " href="/academic/">Academic</a>
+                    <a class="nav-link h4 {% if 'academic' in request.path %}active{% endif %} link-light " href="{% url 'academic' %}">Academic</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 {% if 'blood_community' in request.path %}active{% endif %} link-light " href="/blood_community/">Blood community</a>
+                    <a class="nav-link h4 {% if 'blood_community' in request.path %}active{% endif %} link-light " href="{% url 'Blood_community' %}">Blood community</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 {% if 'alumni' in request.path %}active{% endif %} link-light " href="/alumni/">Alumni</a>
+                    <a class="nav-link h4 {% if 'alumni' in request.path %}active{% endif %} link-light " href="{% url 'alumni' %}">Alumni</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 {% if 'achievement' in request.path %}active{% endif %} link-light " href="/achievement">Achievement</a>
+                    <a class="nav-link h4 {% if 'achievement' in request.path %}active{% endif %} link-light " href="{% url 'achievement' %}">Achievement</a>
                     </li>
                     <li class="nav-item ">
-                    <a class="nav-link h4 {% if 'notice' in request.path %}active{% endif %} link-light " href="/notice/">Notice</a>
+                    <a class="nav-link h4 {% if 'notice' in request.path %}active{% endif %} link-light " href="{% url 'notice' %}">Notice</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav d-flex" >
                     {% if user.is_authenticated %}
                 
                     <li class="nav-item">
-                        <a class="nav-link text-warning {% if request.path == '/profile/' %}active{% endif %}" href="/profile/">{{user.username}}</a>
+                        <a class="nav-link text-warning {% if request.path == '/profile/' %}active{% endif %}" href="{% url 'profile' %}">{{user.username}}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-warning" href="/logout/">Logout</a>
+                        <a class="nav-link text-warning" href="{% url 'logout' %}">Logout</a>
                     </li>
                     {% else %} 
                     
                     <li class="nav-item">
-                        <a class="nav-link h4 {% if 'login' in request.path %}active{% endif %} link-light" href="/login">Login </a>
+                        <a class="nav-link h4 {% if 'login' in request.path %}active{% endif %} link-light" href="{% url 'login' %}">Login </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link h4 {% if 'signup' in request.path %}active{% endif %} link-light" href="/signup">Signup </a>
+                        <a class="nav-link h4 {% if 'signup' in request.path %}active{% endif %} link-light" href="{% url 'signup' %}">Signup </a>
                     </li>
                     {%endif%}
                 </ul>
